--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,55 @@
+:root {
+  --bodyBackground: #000b11;
+  --borderColorFull: rgba(252, 166, 8, 1);
+  --borderColor: 252, 166, 8;
+  --pointColorFull: rgba(245, 222, 179, 1);
+  --pointColor: 38, 119, 191;
+  --shineFull: rgba(114, 175, 228, 1);
+  --shine: 114, 175, 228;
+  --specialFull: rgba(216, 41, 155, 1);
+  --special: 216, 41, 155;
+  --specialFull: rgb(189, 0, 0);
+  --special: 189, 0, 0;
+}
+:root {
+  --bodyBackground: rgba(245, 222, 179, 1);
+  --borderColorFull: rgba(161, 150, 128, 1);
+  --borderColor: 161, 150, 128;
+  --pointColorFull: rgb(56, 52, 43);
+  --pointColor: 56, 52, 43;
+  --shineFull: rgb(14, 10, 0);
+  --shine: 14, 10, 0;
+  --specialFull: rgba(14, 10, 0);
+  --special: 14, 10, 0;
+}
+:root {
+  --bodyBackground: rgba(14, 10, 0, 1);
+  --borderColorFull: rgb(189, 177, 154);
+  --borderColor: 189, 177, 154;
+  --pointColorFull: rgb(109, 103, 91);
+  --pointColor: 109, 103, 91;
+  --shineFull: rgb(245, 222, 179);
+  --shine: 245, 222, 179;
+  --specialFull: rgba(245, 222, 179);
+  --special: 245, 222, 179;
+}
+
 body {
+  display: grid;
+  justify-content: center;
+  align-items: center;
   margin: 0;
   padding: 0;
   width: 100vw;
   height: 100vh;
-  background: maroon;
+  background: var(--bodyBackground);
+  position: relative;
+}
+#clock {
+  width: 550px;
+  height: 550px;
+  border-radius: 50%;
+  background: rgba(255, 255, 255, 0.025);
   position: relative;
 }
 .point {
@@ -12,49 +58,88 @@ body {
   height: 6px;
   border-radius: 50%;
   transform: translate(-50%, -50%);
-  background-color: wheat;
+  background: rgba(var(--borderColor), 1);
 }
+.point:after {
+  content: '';
+  position: absolute;
+  border: 1px solid rgba(var(--borderColor), 0.5);
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 .count {
   position: absolute;
   transform: translate(-50%, -50%);
-  color: wheat;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-size: 2rem;
+  color: rgba(var(--shine), 1);
+  font-family: Calibri, 'Trebuchet MS', sans-serif;
+  font-weight: bold;
+  font-size: 1.5rem;
 }
 .hPointer {
   position: absolute;
-  width: 2px;
-  height: 2px;
+  width: 200px;
+  height: 200px;
+  border: 1px solid rgba(var(--borderColor), 0.5);
+  border-radius: 50%;
 }
 .hPointer:before {
   position: absolute;
   content: '';
   width: 100px;
-  border-top: 4px solid wheat;
+  border-top: 1px solid rgba(var(--borderColor), 0.2);
   top: 50%;
   left: 50%;
   transform: translate(0, -50%);
 }
+.hPointer:after {
+  position: absolute;
+  content: '';
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background: rgba(var(--special), 1);
+  top: 50%;
+  left: 50%;
+  transform: translate(87.5px, -50%);
+}
 
 .mPointer {
+  border: 1px solid rgba(var(--borderColor), 0.5);
+  width: 400px;
+  height: 400px;
+  border-radius: 50%;
   position: absolute;
-  width: 2px;
-  height: 2px;
 }
 .mPointer:before {
   position: absolute;
   content: '';
-  width: 180px;
-  border-top: 4px solid wheat;
+  width: 200px;
+  border-top: 1px solid rgba(var(--borderColor), 0.3);
   top: 50%;
   left: 50%;
   transform: translate(0, -50%);
 }
+.mPointer:after {
+  position: absolute;
+  content: '';
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: rgba(var(--special), 1);
+  top: 50%;
+  left: 50%;
+  transform: translate(190px, -50%);
+}
 
 .sPointer {
-  border: 1px dotted wheat;
-  height: 6px;
-  width: 6px;
+  border: 1px solid rgba(var(--borderColor), 0.2);
+  height: 300px;
+  width: 300px;
   border-radius: 50%;
   position: absolute;
 }
@@ -62,26 +147,56 @@ body {
   position: absolute;
   content: '';
   width: 150px;
-  border-top: 2px dashed white;
+  border-top: 1px dotted rgba(var(--borderColor), 0.5);
   top: 50%;
   left: 50%;
   transform: translate(0, -50%);
 }
+.sPointer:after {
+  position: absolute;
+  content: '';
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  background: rgba(var(--pointColor), 1);
+  top: 50%;
+  left: 50%;
+  transform: translate(142.5px, -50%);
+}
+
 .msPointer {
-  border: 1px dotted wheat;
-  height: 6px;
-  width: 6px;
+  border: 1px solid rgba(var(--borderColor), 0.2);
+  height: 100px;
+  width: 100px;
   border-radius: 50%;
   position: absolute;
 }
 .msPointer:before {
   position: absolute;
   content: '';
+  width: 50px;
+  top: 50%;
+  left: 50%;
+  border-top: 1px dotted rgba(var(--borderColor), 0.5);
+  transform: translate(0, -50%);
+}
+.msPointer:after {
+  position: absolute;
+  content: '';
   width: 10px;
   height: 10px;
   border-radius: 50%;
-  background: white;
+  background: rgba(var(--pointColor), 1);
   top: 50%;
   left: 50%;
-  transform: translate(120px, -50%);
+  transform: translate(45px, -50%);
+}
+
+.middle {
+  background: rgba(var(--borderColor), 1);
+  height: 10px;
+  width: 10px;
+  border-radius: 50%;
+  position: absolute;
+  transform: translate(-50%, -50%);
 }
